update-manager (1:0.142.3) UNRELEASED; urgency=low

  * merged lp:~and471/update-manager/fix-bug-386196, many thanks
  * DistUpgrade/DistUpgradeView*.py:
    - port progress to new python-apt 0.8 API
  * merged lp:~mdz/update-manager/small-fixes-20100707, many thanks

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jun 2010 19:34:38 +0200

update-manager (1:0.142.2) maverick; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - use privileged port 1022 instead of 9004 when (optinally) 
      starting a additional sshd
  * UpdateManager/UpdateManager.py: 
    - fix crash with --no-focus-on-map
  * data/release-upgrades:
    - set release upgrade policy to "normal" for maverick (instead
      of lts)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 Jun 2010 10:48:47 +0200

update-manager (1:0.142.1) maverick; urgency=low

  * UpdateManager/UpdateManager.py:
    - Show reboot required dialog inline instead of doing a popup
      dialog. When morphing windows land into maverick they can 
      be used to make the inline information more pretty. But
      it should be better than the previous popup dialog

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 10 Jun 2010 16:30:07 +0200

update-manager (1:0.142) maverick; urgency=low

  [ Michael Vogt ]
  * check-new-release-gtk: 
    - fix "ask me later" button time
  * DistUpgrade/DistUpgradeController.py,
    DistUpgrade/DistUpgradeCache.py,
    UpdateManager/Core/MetaRelease.py,
    UpdateManager/Core/utils.py,
    UpdateManager/Core/MyCache.py,
    UpdateManager/Core/UpdateList.py,
    UpdateManager/GtkProgress.py,
    UpdateManager/UpdateManager.py:
    - update for python-apt 0.8 API, add tests (LP: #591236)
  * check-new-release-gtk:
    - remove no longer needed warnings filter

  [ Brian Murray ]
  * string fix for 'is aborted now' to 'has aborted'
  * fix in debian/control

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Jun 2010 14:32:05 +0200

update-manager (1:0.141) maverick; urgency=low
