@@ -4,6 +4,11 @@ update-manager (1:0.142.3) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeView*.py:
     - port progress to new python-apt 0.8 API
   * merged lp:~mdz/update-manager/small-fixes-20100707, many thanks
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - call progressbar.set_fraction() less often to avoid too much
+      CPU consumption on certain graphic drivers
+  * UpdateManager/GtkProgress.py:
+    - limit the amount of set_fraction() here too
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jun 2010 19:34:38 +0200
 
